--- a/AIpaca_App/Views/SettingsPage.xaml
+++ b/AIpaca_App/Views/SettingsPage.xaml
@@ -7,6 +7,29 @@
     <ScrollView>
         <VerticalStackLayout Spacing="25" Padding="20">
 
+            <!--로그인 섹션-->
+            <Label Text="로그인" FontAttributes="Bold" FontSize="Large"
+                    TextColor="{AppThemeBinding Dark=White, Light=Black}"/>
+            <Frame CornerRadius="15" HasShadow="True" Padding="10"
+                    BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
+                <VerticalStackLayout Spacing="10">
+                    <StackLayout Orientation="Horizontal" Spacing="10">
+                        <Label Text="로그인" FontAttributes="Bold" VerticalOptions="Center" 
+                                TextColor="{AppThemeBinding Dark=White, Light=Black}" />
+                        <!-- 버튼을 오른쪽에 정렬하기 위한 스택 레이아웃 -->
+                        <StackLayout HorizontalOptions="EndAndExpand">
+                            <!-- 로그인 버튼 -->
+                            <Button Text="로그인" VerticalOptions="Center" Clicked="OnLoginButtonClicked"/>
+                        </StackLayout>
+                        <!-- 탭 인식을 위한 GestureRecognizer 추가 -->
+                        <StackLayout.GestureRecognizers>
+                            <TapGestureRecognizer Tapped="OnRippleEffectRequested"/>
+                        </StackLayout.GestureRecognizers>
+                    </StackLayout>
+                </VerticalStackLayout>
+            </Frame>
+
+
             <!-- 테마 설정 섹션 -->
             <Label Text="테마" FontAttributes="Bold" FontSize="Large"
                    TextColor="{AppThemeBinding Dark=White, Light=Black}"/>
