--- a/AIpaca_App/Resources/Splash/SplashPage.xaml
+++ b/AIpaca_App/Resources/Splash/SplashPage.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AIpaca_App.Resources.Splash.SplashPage"
-             Title="SplashPage">
+             Title="SplashPage"
+             BackgroundColor="#a0e2ff">
     <VerticalStackLayout VerticalOptions="Center" HorizontalOptions="Center">
         <Image Source="logo_aipaca.png" WidthRequest="200" HeightRequest="200"/>
     </VerticalStackLayout>
