로그인 및 회원가입 api 연결
로그인과 회원가입 기능이 서버에 연결되었습니다
api주소를 관리하기 위한 ApiConfig.xml파일과, ApiConfigManager.cs를 생성했습니다

--- a/AIpaca_App/Views/Account/LoginPagePopup.xaml
+++ b/AIpaca_App/Views/Account/LoginPagePopup.xaml
@@ -12,8 +12,8 @@
             <RoundRectangle CornerRadius="20" />
         </Border.StrokeShape>
         <VerticalStackLayout Spacing="15">
-            <Entry Placeholder="이메일"/>
-            <Entry Placeholder="비밀번호" IsPassword="True"/>
+            <Entry x:Name="UsernameEntry" Placeholder="유저이름"/>
+            <Entry x:Name="PasswordEntry" Placeholder="비밀번호" IsPassword="True"/>
             <Button Text="로그인" Clicked="OnLoginClicked"/>
         </VerticalStackLayout>
     </Border>
