로그인 상태 유지 및 mvvm 적용
로그인을 하면 로그인/회원가입 버튼이 사라지고, 로그아웃버튼이 나타납니다
mvvm 디자인 패턴을 적용하기위해 ViewModels폴더에 MainViewModel를 생성 후 SettingsPage의 동작을 이전했습니다

--- a/AIpaca_App/Views/SettingsPage.xaml
+++ b/AIpaca_App/Views/SettingsPage.xaml
@@ -2,11 +2,12 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AIpaca_App.Views.SettingsPage"
+             xmlns:vm="clr-namespace:AIpaca_App.ViewModels"
+             x:DataType="vm:MainViewModel"
              BackgroundColor="{DynamicResource DefaultPageBackgroundColor}">
 
     <ScrollView>
         <VerticalStackLayout Spacing="25" Padding="20">
-
             <!--로그인 섹션-->
             <Label Text="로그인" FontAttributes="Bold" FontSize="Large"
                     TextColor="{AppThemeBinding Dark=White, Light=Black}"/>
@@ -14,13 +15,18 @@
                     BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
                 <VerticalStackLayout Spacing="10">
                     <StackLayout Orientation="Horizontal" Spacing="10">
-                        <Label Text="로그인" FontAttributes="Bold" VerticalOptions="Center"  />
+                        <Label Text="로그인" FontAttributes="Bold" VerticalOptions="Center" />
                         <!-- 여백을 주어 버튼들을 오른쪽에 배치 -->
                         <BoxView HorizontalOptions="FillAndExpand" BackgroundColor="Transparent"/>
                         <!-- 로그인 버튼 -->
-                        <Button Text="로그인" Clicked="OnLoginButtonClicked"  WidthRequest="80" HorizontalOptions="End"/>
+                        <Button Text="로그인" Clicked="OnLoginButtonClicked" WidthRequest="80" HorizontalOptions="End" 
+                                IsVisible="{Binding IsLoggedIn, Converter={StaticResource InverseBooleanConverter}}"/>
                         <!-- 회원가입 버튼 -->
-                        <Button Text="회원가입" Clicked="OnSignupButtonClicked" WidthRequest="80" HorizontalOptions="End"/>
+                        <Button Text="회원가입" Clicked="OnSignupButtonClicked" WidthRequest="80" HorizontalOptions="End" 
+                                IsVisible="{Binding IsLoggedIn, Converter={StaticResource InverseBooleanConverter}}"/>
+                        <!-- 로그아웃 버튼 -->
+                        <Button Text="로그아웃" Clicked="OnLogoutButtonClicked" IsVisible="{Binding IsLoggedIn}" />
+
                         <!-- 탭 인식을 위한 GestureRecognizer 추가 -->
                         <StackLayout.GestureRecognizers>
                             <TapGestureRecognizer Tapped="OnRippleEffectRequested"/>
@@ -39,7 +45,7 @@
                     <StackLayout Orientation="Horizontal" Spacing="10">
                         <Label Text="다크 모드" FontAttributes="Bold" VerticalOptions="Center" 
                                TextColor="{AppThemeBinding Dark=White, Light=Black}"/>
-                        <Switch x:Name="DarkModeToggle" HorizontalOptions="EndAndExpand" Toggled="OnDarkModeToggled"/>
+                        <Switch x:Name="DarkModeToggle" HorizontalOptions="EndAndExpand" IsToggled="{Binding IsDarkModeEnabled}" />
                         <!-- 탭 인식을 위한 GestureRecognizer 추가 -->
                         <StackLayout.GestureRecognizers>
                             <TapGestureRecognizer Tapped="OnRippleEffectRequested"/>
