--- a/AIpaca_App/App.xaml
+++ b/AIpaca_App/App.xaml
@@ -2,9 +2,11 @@
 <Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:AIpaca_App"
+             xmlns:conv="clr-namespace:AIpaca_App.Views.Converters"
              x:Class="AIpaca_App.App">
     <Application.Resources>
         <ResourceDictionary>
+            <conv:InverseBooleanConverter x:Key="InverseBooleanConverter" />
             <Color x:Key="DefaultPageBackgroundColor">White</Color>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
