--- a/AIpaca_App/AppShell.xaml
+++ b/AIpaca_App/AppShell.xaml
@@ -5,9 +5,11 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:AIpaca_App"
     xmlns:views="clr-namespace:AIpaca_App.Views"
+    xmlns:resources="clr-namespace:AIpaca_App.Resources.Localization"
     Shell.FlyoutBehavior="Disabled"
     Title="AIpaca_App">
-
+    
+    <ShellContent Route="settingsPage" ContentTemplate="{DataTemplate views:SettingsPage}" />
     <!-- Shell 리소스 -->
     <Shell.Resources>
         <ResourceDictionary>
