--- a/AIpaca_App/Views/Account/SignupPagePopup.xaml
+++ b/AIpaca_App/Views/Account/SignupPagePopup.xaml
@@ -2,12 +2,13 @@
 <toolkit:Popup xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
                xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+               xmlns:resources="clr-namespace:AIpaca_App.Resources.Localization"
                x:Class="AIpaca_App.Views.Account.SignupPagePopup"
                Size="300,400"
                Color= "{x:Static Colors.Transparent}">
 
     <!-- Border를 사용하여 모서리를 둥글게 설정 -->
-    <Border Padding="20" BackgroundColor="White">
+    <Border Padding="20" BackgroundColor="{AppThemeBinding Dark=#1c1c1c, Light=#ffffff}">
         <Border.StrokeShape>
             <RoundRectangle CornerRadius="20" />
         </Border.StrokeShape>
