--- a/AIpaca_App/Views/Account/LoginPagePopup.xaml
+++ b/AIpaca_App/Views/Account/LoginPagePopup.xaml
@@ -13,9 +13,9 @@
             <RoundRectangle CornerRadius="20" />
         </Border.StrokeShape>
         <VerticalStackLayout Spacing="15">
-            <Entry x:Name="UsernameEntry" Placeholder="유저이름"/>
-            <Entry x:Name="PasswordEntry" Placeholder="비밀번호" IsPassword="True"/>
-            <Button Text="로그인" Clicked="OnLoginClicked"/>
+            <Entry x:Name="UsernameEntry" Placeholder="{x:Static resources:AppResources.username}"/>
+            <Entry x:Name="PasswordEntry" Placeholder="{x:Static resources:AppResources.password}" IsPassword="True"/>
+            <Button Text="{x:Static resources:AppResources.login}" Clicked="OnLoginClicked"/>
         </VerticalStackLayout>
     </Border>
 </toolkit:Popup>
