--- a/AIpaca_App/Views/SettingsPage.xaml
+++ b/AIpaca_App/Views/SettingsPage.xaml
@@ -27,7 +27,6 @@
                                 IsVisible="{Binding IsLoggedIn, Converter={StaticResource InverseBooleanConverter}}"/>
                         <!-- 로그아웃 버튼 -->
                         <Button Text="{x:Static resources:AppResources.logout}" Clicked="OnLogoutButtonClicked" IsVisible="{Binding IsLoggedIn}" />
-
                         <!-- 탭 인식을 위한 GestureRecognizer 추가 -->
                         <StackLayout.GestureRecognizers>
                             <TapGestureRecognizer Tapped="OnRippleEffectRequested"/>
@@ -38,13 +37,13 @@
 
 
             <!-- 테마 설정 섹션 -->
-            <Label Text="테마" FontAttributes="Bold" FontSize="Large"
+            <Label Text="{x:Static resources:AppResources.thema}" FontAttributes="Bold" FontSize="Large"
                    TextColor="{AppThemeBinding Dark=White, Light=Black}"/>
             <Frame CornerRadius="15" HasShadow="True" Padding="10"
                    BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
                 <VerticalStackLayout Spacing="10">
                     <StackLayout Orientation="Horizontal" Spacing="10">
-                        <Label Text="다크 모드" FontAttributes="Bold" VerticalOptions="Center" 
+                        <Label Text="{x:Static resources:AppResources.darkmode}" FontAttributes="Bold" VerticalOptions="Center" 
                                TextColor="{AppThemeBinding Dark=White, Light=Black}"/>
                         <Switch x:Name="DarkModeToggle" HorizontalOptions="EndAndExpand" IsToggled="{Binding IsDarkModeEnabled}" />
                         <!-- 탭 인식을 위한 GestureRecognizer 추가 -->
@@ -57,7 +56,7 @@
                     <BoxView HeightRequest="1.5" Color="{AppThemeBinding Dark=#555555, Light=#cfcfcf}" HorizontalOptions="FillAndExpand"/>
 
                     <StackLayout Orientation="Horizontal" Spacing="10">
-                        <Label Text="저사양 모드" FontAttributes="Bold" VerticalOptions="Center" 
+                        <Label Text="{x:Static resources:AppResources.lowspecmode}" FontAttributes="Bold" VerticalOptions="Center" 
                                TextColor="{AppThemeBinding Dark=White, Light=Black}"/>
                         <Switch HorizontalOptions="EndAndExpand" Toggled="LowPowerModeEnabled"/>
                         <!-- 탭 인식을 위한 GestureRecognizer 추가 -->
@@ -69,13 +68,13 @@
             </Frame>
 
             <!-- 네트워크 설정 섹션 -->
-            <Label Text="네트워크" FontAttributes="Bold" FontSize="Large" 
+            <Label Text="{x:Static resources:AppResources.network}" FontAttributes="Bold" FontSize="Large" 
                  TextColor="{AppThemeBinding Dark=White, Light=Black}"/>
             <Frame CornerRadius="15" HasShadow="True" Padding="10"
                  BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
                 <VerticalStackLayout Spacing="10">
                     <StackLayout Orientation="Horizontal" Spacing="10">
-                        <Label Text="API 설정" FontAttributes="Bold" VerticalOptions="Center" 
+                        <Label Text="{x:Static resources:AppResources.apisetting}" FontAttributes="Bold" VerticalOptions="Center" 
                    TextColor="{AppThemeBinding Dark=White, Light=Black}"/>
                         <!-- 탭 인식을 위한 GestureRecognizer 추가 -->
                         <StackLayout.GestureRecognizers>
@@ -86,14 +85,14 @@
             </Frame>
 
             <!-- 시스템 설정 섹션 -->
-            <Label Text="시스템" FontAttributes="Bold" FontSize="Large"  
+            <Label Text="{x:Static resources:AppResources.system}" FontAttributes="Bold" FontSize="Large"  
                 TextColor="{AppThemeBinding Dark=White, Light=Black}"/>
             <Frame CornerRadius="15" HasShadow="True" Padding="10" 
                    BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
                 <VerticalStackLayout Spacing="10">
 
                     <StackLayout Orientation="Horizontal" Spacing="10">
-                        <Label Text="앱 버전" FontAttributes="Bold" VerticalOptions="Center" 
+                        <Label Text="{x:Static resources:AppResources.appversion}" FontAttributes="Bold" VerticalOptions="Center" 
                             TextColor="{AppThemeBinding Dark=White, Light=Black}"/>
 
                         <Label Text="{Binding AppVersion}" HorizontalOptions="EndAndExpand"
@@ -107,26 +106,9 @@
                     <BoxView HeightRequest="1.5" Color="{AppThemeBinding Dark=#555555, Light=#cfcfcf}" HorizontalOptions="FillAndExpand"/>
 
                     <StackLayout Orientation="Horizontal" Spacing="10">
-                        <Label Text="언어 설정" FontAttributes="Bold" VerticalOptions="Center" 
+                        <Label Text="{x:Static resources:AppResources.languageset}" FontAttributes="Bold" VerticalOptions="Center" 
                             TextColor="{AppThemeBinding Dark=White, Light=Black}"/>
-                        <Button Text="언어 설정" Clicked="OnLanguageSettingsClicked"/>
-                        <Image Source="icon_right_arrow.png" 
-                            HorizontalOptions="EndAndExpand" 
-                            VerticalOptions="Center" 
-                            WidthRequest="10" 
-                            HeightRequest="10" />
-                        <!-- 탭 인식을 위한 GestureRecognizer 추가 -->
-                        <StackLayout.GestureRecognizers>
-                            <TapGestureRecognizer Tapped="OnRippleEffectRequested"/>
-                        </StackLayout.GestureRecognizers>
-                    </StackLayout>
-
-                    <!-- 검은색 막대 구분선 추가 -->
-                    <BoxView HeightRequest="1.5" Color="{AppThemeBinding Dark=#555555, Light=#cfcfcf}" HorizontalOptions="FillAndExpand"/>
-
-                    <StackLayout Orientation="Horizontal" Spacing="10">
-                        <Label Text="언어 설정2" FontAttributes="Bold" VerticalOptions="Center" 
-                            TextColor="{AppThemeBinding Dark=White, Light=Black}"/>
+                        <Button Text="{x:Static resources:AppResources.languageset}" Clicked="OnLanguageSettingsClicked"/>
                         <Image Source="icon_right_arrow.png" 
                             HorizontalOptions="EndAndExpand" 
                             VerticalOptions="Center" 
