--- a/AIpaca_App/Views/MainPage.xaml
+++ b/AIpaca_App/Views/MainPage.xaml
@@ -5,40 +5,30 @@
              x:Class="AIpaca_App.Views.MainPage"
              BackgroundColor="{DynamicResource DefaultPageBackgroundColor}">
 
-    <ScrollView>
-        <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
+    <Grid RowDefinitions="*,*">
+        <!-- 상단 텍스트 입력 필드 영역 -->
+        <ScrollView Grid.Row="0" Padding="10">
+            <Frame CornerRadius="20" Padding="0" Margin="20">
+                <VerticalStackLayout Spacing="10" Padding="10">
+                    <!-- 입력 필드 -->
+                    <Entry x:Name="SourceTextEntry"
+                           Placeholder="번역할 내용을 입력하세요"
+                           VerticalOptions="Start" />
+                    <!-- 번역하기 버튼 -->
+                    <Button Text="번역하기"
+                            HorizontalOptions="FillAndExpand"
+                            Clicked="OnTranslateButtonClicked" />
+                </VerticalStackLayout>
+            </Frame>
+        </ScrollView>
 
-            <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
-            
-            <!-- Welcome 문자열 출력 -->
-            <Label Text="{x:Static resources:AppResources.hi}"
-                   HorizontalOptions="Center"
-                   VerticalOptions="Center"
-                   Style="{StaticResource Headline}"/>
-
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
-
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
-        </VerticalStackLayout>
-    </ScrollView>
-
+        <!-- 하단 번역된 텍스트 영역 -->
+        <ScrollView Grid.Row="1" Padding="10">
+            <Frame Grid.Row="1" CornerRadius="20" Padding="10" Margin="20" BorderColor="Gray">
+                <Editor x:Name="TranslatedTextEditor"
+            IsReadOnly="True"
+            VerticalOptions="FillAndExpand" />
+            </Frame>
+        </ScrollView>
+    </Grid>
 </ContentPage>
