--- a/AIpaca_App/Views/MainPage.xaml
+++ b/AIpaca_App/Views/MainPage.xaml
@@ -16,19 +16,16 @@
                 </Grid.ColumnDefinitions>
 
                 <!-- 왼쪽 언어 선택 Picker -->
-                <Frame Grid.Column="0" CornerRadius="10" Padding="0" HasShadow="False">
+                <Frame Grid.Column="0" CornerRadius="10" Padding="0" HasShadow="False"> 
                     <!-- 왼쪽 언어 선택 Picker -->
-                    <Picker x:Name="LeftLanguagePicker" Title="{x:Static resources:AppResources.selectlanguage}">
+                    <Picker x:Name="LeftLanguagePicker" Title="{x:Static resources:AppResources.selectlanguage}" SelectedIndexChanged="LeftLanguagePicker_SelectedIndexChanged">
                         <Picker.ItemsSource>
                             <x:Array Type="{x:Type x:String}">
                                 <x:String>한국어</x:String>
                                 <x:String>English</x:String>
                             </x:Array>
                         </Picker.ItemsSource>
-                        <Picker.SelectedIndex>
-                            0
-                            <!-- 한국어 선택 -->
-                        </Picker.SelectedIndex>
+                        <Picker.SelectedIndex>0</Picker.SelectedIndex>
                     </Picker>
                 </Frame>
 
@@ -37,17 +34,14 @@
 
                 <!-- 오른쪽 언어 선택 Picker -->
                 <Frame Grid.Column="2" CornerRadius="10" Padding="0" HasShadow="False">
-                    <Picker x:Name="RightLanguagePicker" Title="{x:Static resources:AppResources.selectlanguage}">
+                    <Picker x:Name="RightLanguagePicker" Title="{x:Static resources:AppResources.selectlanguage}" SelectedIndexChanged="RightLanguagePicker_SelectedIndexChanged">
                         <Picker.ItemsSource>
                             <x:Array Type="{x:Type x:String}">
                                 <x:String>한국어</x:String>
                                 <x:String>English</x:String>
                             </x:Array>
                         </Picker.ItemsSource>
-                        <Picker.SelectedIndex>
-                            1
-                            <!-- 영어 선택 -->
-                        </Picker.SelectedIndex>
+                        <Picker.SelectedIndex>1</Picker.SelectedIndex>
                     </Picker>
                 </Frame>
             </Grid>
@@ -63,23 +57,23 @@
                 <Grid Grid.Row="0" Grid.Column="0" Margin="5,5,5,5">
                     <!-- 아래쪽 Editor와의 간격을 위한 마진 설정 -->
                     <Frame CornerRadius="10" BorderColor="LightGray" Padding="5">
-                        <Editor x:Name="InputEditor" Grid.Row="0" Placeholder="텍스트 입력" AutoSize="TextChanges" MinimumHeightRequest="100"/>
+                        <Editor x:Name="InputEditor" Text="{Binding OriginalText, Mode=TwoWay}" Grid.Row="0" Placeholder="텍스트 입력" AutoSize="TextChanges" MinimumHeightRequest="100"/>
                     </Frame>
                 </Grid>
                 <!-- 두 번째 Editor를 담을 Grid -->
                 <Grid Grid.Row="1" Grid.Column="1" Margin="5,5,5,5">
                     <Frame CornerRadius="10" BorderColor="LightGray" Padding="5">
-                        <Editor x:Name="TranslatedEditor" Grid.Row="1" Placeholder="번역된 텍스트" AutoSize="TextChanges" MinimumHeightRequest="100"/>
+                        <Editor x:Name="TranslatedEditor" Text="{Binding TranslatedText, Mode=TwoWay}" Grid.Row="1" Placeholder="번역된 텍스트" AutoSize="TextChanges" MinimumHeightRequest="100"/>
                     </Frame>
                 </Grid>
             </Grid>
 
             <!-- 평가받기 버튼 -->
-            <Button Text="평가받기" Clicked="OnEvaluateButtonClicked" />
+            <Button Text="평가받기" Command="{Binding EvaluateTranslationCommand}"  />
 
             <!-- 텍스트 반환 값 출력 -->
             <Frame Grid.Column="0" CornerRadius="10" Padding="10" HasShadow="False" >
-                <Label x:Name="TranslatedTextLabel" Text="번역 결과가 여기에 표시됩니다." />
+                <Label x:Name="TranslatedTextLabel" Text="{Binding TranslationResult}" />
             </Frame>
 
         </VerticalStackLayout>
