스플레쉬 페이지 기능 추가
ping 요청으로 서버 연결 확인
스플래쉬 화면의 기능 일부 추가 및 최적

--- a/AIpaca_App/Resources/Splash/SplashPage.xaml
+++ b/AIpaca_App/Resources/Splash/SplashPage.xaml
@@ -4,7 +4,9 @@
              x:Class="AIpaca_App.Resources.Splash.SplashPage"
              Title="SplashPage"
              BackgroundColor="#a0e2ff">
+    
     <VerticalStackLayout VerticalOptions="Center" HorizontalOptions="Center">
         <Image Source="logo_aipaca.png" WidthRequest="200" HeightRequest="200"/>
+        <Label x:Name="statusLabel" Text="앱 초기화 중..." FontSize="Medium" HorizontalTextAlignment="Center"/>
     </VerticalStackLayout>
 </ContentPage>
