--- a/AIpaca_App/Views/MainPage.xaml
+++ b/AIpaca_App/Views/MainPage.xaml
@@ -57,19 +57,19 @@
                 <Grid Grid.Row="0" Grid.Column="0" Margin="5,5,5,5">
                     <!-- 아래쪽 Editor와의 간격을 위한 마진 설정 -->
                     <Frame CornerRadius="10" BorderColor="LightGray" Padding="5" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
-                        <Editor x:Name="InputEditor" Text="{Binding OriginalText, Mode=TwoWay}" Grid.Row="0" Placeholder="텍스트 입력" AutoSize="TextChanges" MinimumHeightRequest="100"/>
+                        <Editor x:Name="InputEditor" Text="{Binding OriginalText, Mode=TwoWay}" Grid.Row="0" Placeholder="{x:Static resources:AppResources.text_to_be_translated}" AutoSize="TextChanges" MinimumHeightRequest="100"/>
                     </Frame>
                 </Grid>
                 <!-- 두 번째 Editor를 담을 Grid -->
                 <Grid Grid.Row="1" Grid.Column="1" Margin="5,5,5,5">
                     <Frame CornerRadius="10" BorderColor="LightGray" Padding="5" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
-                        <Editor x:Name="TranslatedEditor" Text="{Binding TranslatedText, Mode=TwoWay}" Grid.Row="1" Placeholder="번역된 텍스트" AutoSize="TextChanges" MinimumHeightRequest="100"/>
+                        <Editor x:Name="TranslatedEditor" Text="{Binding TranslatedText, Mode=TwoWay}" Grid.Row="1" Placeholder="{x:Static resources:AppResources.translated_text}" AutoSize="TextChanges" MinimumHeightRequest="100"/>
                     </Frame>
                 </Grid>
             </Grid>
 
             <!-- 평가받기 버튼 -->
-            <Button Text="평가받기" Command="{Binding EvaluateTranslationCommand}"  />
+            <Button Text="{x:Static resources:AppResources.evaluate}" Command="{Binding EvaluateTranslationCommand}"  />
 
             <!-- 텍스트 반환 값 출력 -->
             <Frame Grid.Column="0" CornerRadius="10" Padding="10" HasShadow="False" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
