--- a/AIpaca_App/Views/MainPage.xaml
+++ b/AIpaca_App/Views/MainPage.xaml
@@ -23,6 +23,7 @@
                             <x:Array Type="{x:Type x:String}">
                                 <x:String>한국어</x:String>
                                 <x:String>English</x:String>
+                                <x:String>日本語</x:String>
                             </x:Array>
                         </Picker.ItemsSource>
                         <Picker.SelectedIndex>0</Picker.SelectedIndex>
@@ -39,6 +40,7 @@
                             <x:Array Type="{x:Type x:String}">
                                 <x:String>한국어</x:String>
                                 <x:String>English</x:String>
+                                <x:String>日本語</x:String>
                             </x:Array>
                         </Picker.ItemsSource>
                         <Picker.SelectedIndex>1</Picker.SelectedIndex>
