--- a/AIpaca_App/Views/Settings/LanguageSelectionPopup.xaml
+++ b/AIpaca_App/Views/Settings/LanguageSelectionPopup.xaml
@@ -14,6 +14,7 @@
         <VerticalStackLayout Spacing="15" >
             <Button Text="English" Clicked="OnEnglishSelected"/>
             <Button Text="한국어" Clicked="OnKoreanSelected"/>
+            <Button Text="日本語" Clicked="OnJapaneseSelected"/>
         </VerticalStackLayout>
     </Border>
 
