--- a/AIpaca_App/Views/ChallengePage.xaml
+++ b/AIpaca_App/Views/ChallengePage.xaml
@@ -5,7 +5,8 @@
              xmlns:resources="clr-namespace:AIpaca_App.Resources.Localization"
              BackgroundColor="{DynamicResource DefaultPageBackgroundColor}"
              xmlns:vm="clr-namespace:AIpaca_App.ViewModels"
-             xmlns:model="clr-namespace:AIpaca_App.Models">
+             xmlns:model="clr-namespace:AIpaca_App.Models"
+             x:DataType="vm:ChallengeViewModel">
 
     <ContentPage.BindingContext>
         <vm:ChallengeViewModel/>
@@ -15,12 +16,9 @@
         <CollectionView ItemsSource="{Binding Achievements}">
             <CollectionView.ItemTemplate>
                 <DataTemplate x:DataType="model:AchieveList">
-                    <!-- 사각형 박스로 각 항목을 감쌉니다 -->
                     <Frame Padding="10" Margin="5" CornerRadius="10" BorderColor="Gray" BackgroundColor="{AppThemeBinding Dark=#2c2c2c, Light=#ffffff}">
                         <StackLayout>
-                            <!-- 업적 이름을 표시하는 레이블 -->
                             <Label Text="{Binding AchieveName}" FontAttributes="Bold" FontSize="20"/>
-                            <!-- 추가 정보를 표시할 수 있는 레이블 등의 요소를 추가할 수 있습니다 -->
                             <Label Text="{Binding AchieveDate, StringFormat='{0:yyyy년 MM월 dd일}'}" FontSize="16"/>
                             <Label Text="{Binding IsAvailable, StringFormat='Available: {0}'}" FontSize="14"/>
                         </StackLayout>
