--- a/AIpaca_App/Views/MainPage.xaml
+++ b/AIpaca_App/Views/MainPage.xaml
@@ -3,7 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AIpaca_App.Views.MainPage"
              xmlns:resources="clr-namespace:AIpaca_App.Resources.Localization"
-             BackgroundColor="{DynamicResource DefaultPageBackgroundColor}">
+             BackgroundColor="{DynamicResource DefaultPageBackgroundColor}"
+             xmlns:vm="clr-namespace:AIpaca_App.ViewModels"
+             x:DataType="vm:MainViewModel">
 
     <ScrollView>
         <VerticalStackLayout Spacing="10" Padding="20">
